...
) {
    Scaffold(
        modifier = Modifier.fillMaxSize(),
        topBar = {
            CustomTopAppBar(
                startIcon = Icons.Default.ArrowBack,
                startIconContentDesc = "Back Navigation Arrow",
                startIconCallback = onBackNavIconClick,
                title = stringResource(StringRes.details)
            )
        },
        content = { paddingValues ->
            Column(
...
                    modifier = Modifier.height(300.dp),
                    imageUrlToLoad = "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Google_%22G%22_logo.svg/768px-Google_%22G%22_logo.svg.png"
                )
                Spacer(modifier = Modifier.height(30.dp))

                BasicCharacterInfo(
                    characterName = "Morty Smith",
                    isAlive = true,
                    status = "Alive"
                )

                CharacterDetails(
                    species = "Human",
...
