<resources>
    <string name="app_name">Rick &amp; Morty Wiki</string>

    <!-- Home Screen -->
    <string name="home">Home</string>
    <string name="character_label">#%1s %2s"</string>

    <!-- Character Details -->
    <string name="character_details">Character Details</string>
    <string name="species">"Species"</string>
    <string name="gender">"Gender"</string>
    <string name="origin">"Origin"</string>
    <string name="location">"Location"</string>
    <string name="episodes">Episodes</string>
    <string name="location_name">Name: %s</string>
    <string name="location_type">Type: %s</string>
    <string name="location_dimension">Dimension: %s</string>

    <!-- Episode Details -->
    <string name="episode_details">Episode Details</string>
    <string name="divider"> | </string>
    <string name="characters">Characters</string>
    <string name="empty_results">No results found.</string>

    <!-- Locations -->
    <string name="locations">Locations</string>

    <!-- Location Details -->
    <string name="location_details">Location Details</string>
    <string name="type">Type:</string>
    <string name="dimension">Dimension:</string>
    <string name="residents">Residents</string>
</resources>
