## Subflow to test the character details screen.

appId: com.stathis.rickandmortyapp
---

# Assert that the screen has the correct title
- assertVisible: "Character Details"

# Assert that the character's name is visible
- assertVisible: ${CHARACTER_NAME}

# Assert that the character's species details card is visible
- assertVisible: "Species"
- assertVisible: "Human"

# Assert that the character's gender card is visible
- assertVisible: "Gender"
- assertVisible: "Male"

# Assert that the character's origin details card is visible
- assertVisible: "Origin"
- assertVisible: "Name: Earth (C-137)"

# Assert the character's location details card is visible
- assertVisible: "Location"
- assertVisible: "Name: Citadel of Ricks"

# Assert the episodes are visible
- assertVisible: "Episodes"

# Scroll down in the screen until the specific episode can be seen & click on it to trigger the episode subflow.
- scrollUntilVisible:
    element: "The Ricks Must Be Crazy | S02E06"
    direction: DOWN

- tapOn: "The Ricks Must Be Crazy | S02E06"

# Triggers the character details screen subflow.
- runFlow: episode_details_screen.yaml

# Scroll up to character details screen.
- scrollUntilVisible:
    element: "Origin"
    direction: Up


# Assert that the character's origin details card is visible & tap on it.
- assertVisible: "Origin"
- assertVisible: "Name: Earth (C-137)"
- tapOn: "Name: Earth (C-137)"

- runFlow: location_details_screen.yaml

# Tap on Back btn
- tapOn: "Back Navigation Arrow"
